fixed style and scrollbar

--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -18,7 +18,7 @@
 }
 
 .formControl {
-  margin: 2rem 0;
+  margin: 1.3rem 0;
 }
 
 .formControl a {
