--- a/src/Components/SignUp/SignUp.module.css
+++ b/src/Components/SignUp/SignUp.module.css
@@ -21,7 +21,7 @@ form {
 }
 
 .formControl {
-  margin: 2rem 0;
+  margin: 1.3rem 0;
 }
 
 .nameBox {
