--- a/src/common/style.module.css
+++ b/src/common/style.module.css
@@ -1,13 +1,13 @@
 /* error */
 span {
   visibility: hidden;
+  height: 2rem;
 }
 
 .error {
   visibility: visible;
-  display: inline-flex;
-  align-items: flex-start;
-  margin-top: 0.5rem;
+  display: flex;
+  align-items: center;
   font-size: 1.2rem;
   color: red;
 }
